--- a/calculator.html
+++ b/calculator.html
@@ -6,39 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
 
-    <link rel="stylesheet" href="calculator.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!--    <marquee behavior="" direction="">Theophilus</marquee> -->
     <div class="calculator">
         <div class="display">
-            <div class="output"> 2+2 </div>
-            <div class="result"> 4 </div>
+            <div class="output"></div>
+            <div class="result">0</div>
         </div>
         <div class="input">
             <button>AC</button>
             <button>(</button>
             <button>)</button>
-            <button>+</button>
+            <button><span>+</span></button>
 
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>-</button>
+            <button><span>-</span></button>
 
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>*</button>
+            <button><span>*</span></button>
 
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>/</button>
+            <button><span>-</span></button>
 
-            <button>DEL</button>
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
+            <button><span>DEL</span></button>
+            <button><span>0</span></button>
+            <button><span>.</span></button>
+            <button><span>=</span></button>
         </div>
     </div>
 
