--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button><span>-</span></button>
+            <button><span>/</span></button>
 
             <button><span>DEL</span></button>
             <button><span>0</span></button>
